tests/fail/semantic/product_type_mismatch_prefix_op_field.cyt
record Input(name: string)

rule (a: Input) -> Input(name: -a.name)

// args: --no-colour

// expected stderr:
// error: cannot apply unary operator `-` to type `string`
//   ┌─ ../tests/fail/semantic/product_type_mismatch_prefix_op_field.cyt:3:32
//   │
// 3 │ rule (a: Input) -> Input(name: -a.name)
//   │                                ^------ this expression has type `string`
//   │                                │ 
//   │                                this unary operator is incompatible with type `string`
//   │
//   = the unary operator `-` is compatible with:
//     - type `int`